# comedi

./: .gitignore  AUTHORS  ChangeLog  Changelog  Config.in  Contributors  INSTALL  INSTALL-old.md  INSTALL.RTAI  INSTALL.RTLinux  INSTALL.md  Makefile  Makefile.am  Makefile.in.append  Makefile.modbuild  NOTES  README  README.Git  README.Git.md  README.md  Rules.make  TODO  autogen.sh  comedi-kmod.spec.in  configure  configure.ac  dkms.conf  dkms.conf.in  modtool.in
Documentation/: Configure.help  Configure.help.append
Documentation/comedi/: FAQ  Hardware_Driver.HOWTO  command  configuration  counter-spec  drivers.txt  hardware  insn_config  mode-info  pci.ids  redhat-notes
Documentation/comedi/notes/: das
arch/: Makefile.noarch
comedi/: .cvsignore  Config.in  Kbuild  Makefile  Makefile.am  Makefile.in  am9513.h  comedi_buf.c  comedi_compat32.c  comedi_compat32.h  comedi_fops.c  comedi_fops.h  comedi_internal.h  comedi_kbuild.inc.in  comedi_ksyms.c  comedi_module.h  comedi_rt.h  drivers.c  dummy.c  kern_compat.h  kvmem.c  kvmem.h  mk_range.c  module.c  parport.c  proc.c  range.c  rt.c  rt_pend_tq.c  rt_pend_tq.h  rtai.c  rtai.h  rtl.c  rtl.h  rtl_v1.c  rtl_v1.h  trig.c
comedi/drivers/: .gitignore  8253.h  8255.c  8255.h  Kbuild  Makefile  Makefile.am  Makefile.in  acl7225b.c  addi_apci_035.c  addi_apci_1032.c  addi_apci_1500.c  addi_apci_1516.c  addi_apci_1564.c  addi_apci_16xx.c  addi_apci_1710.c  addi_apci_2016.c  addi_apci_2032.c  addi_apci_2200.c  addi_apci_3001.c  addi_apci_3120.c  addi_apci_3200.c  addi_apci_3300.c  addi_apci_3501.c  addi_apci_3xxx.c  addi_apci_all.c  adl_pci6208.c  adl_pci7230.c  adl_pci7250.c  adl_pci7296.c  adl_pci7432.c  adl_pci8164.c  adl_pci9111.c  adl_pci9112.c  adl_pci9118.c  adq12b.c  adv_pci1710.c  adv_pci1723.c  adv_pci1724.c  adv_pci_dio.c  (+131 more)
comedi/drivers/addi-data/: APCI1710_82x54.c  APCI1710_82x54.h  APCI1710_Chrono.c  APCI1710_Chrono.h  APCI1710_Dig_io.c  APCI1710_Dig_io.h  APCI1710_INCCPT.c  APCI1710_INCCPT.h  APCI1710_Inp_cpt.c  APCI1710_Inp_cpt.h  APCI1710_Pwm.c  APCI1710_Pwm.h  APCI1710_Ssi.c  APCI1710_Ssi.h  APCI1710_Tor.c  APCI1710_Tor.h  APCI1710_Ttl.c  APCI1710_Ttl.h  Makefile.am  addi_amcc_S5920.c  addi_amcc_S5920.h  addi_amcc_s5933.h  addi_common.c  addi_common.h  addi_eeprom.c  amcc_s5933_58.h  hwdrv_APCI1710.c  hwdrv_APCI1710.h  hwdrv_apci035.c  hwdrv_apci035.h  hwdrv_apci1032.c  hwdrv_apci1032.h  hwdrv_apci1500.c  hwdrv_apci1500.h  hwdrv_apci1516.c  hwdrv_apci1516.h  hwdrv_apci1564.c  hwdrv_apci1564.h  hwdrv_apci16xx.c  hwdrv_apci16xx.h  (+14 more)
comedi/kcomedilib/: Makefile  Makefile.am  Makefile.in  data.c  dio.c  get.c  kcomedilib_main.c  ksyms.c
comedi/old/: atmio-16d.c  atmio-16f.c  atmio-16x.c  rti860.c
comedi/realtime/: Makefile  vd_dds.c  vd_timer.c
comedi/rt_pend_tq/: Makefile  rt_pend_tq.c  rt_pend_tq.h
comedi_config/: Makefile  comedi_config.c
debian/: changelog  comedi-modules.control  comedi-modules.postinst  comedi-modules.prerm  comedi-source.postinst  comedi-source.prerm  control  copyright  files  genchanges.sh  rules
etc/: comedi.conf  conf.modules  isapnp.conf
etc/pcmcia/: comedi  comedi.conf
inc-wrap/asm/: Makefile.am  barrier.h  dma-mapping.h  io.h  pgtable.h
inc-wrap/linux/: Makefile.am  cdev.h  compiler.h  config.h  delay.h  device.h  dma-mapping.h  err.h  firmware.h  fs.h  init.h  interrupt.h  jiffies.h  kernel.h  kref.h  ktime.h  mm.h  module.h  moduleparam.h  mutex.h  pci.h  pci_ids.h  poll.h  printk.h  semaphore.h  slab.h  spinlock.h  stddef.h  string.h  time.h  timer.h  types.h  uaccess.h  unaligned.h  usb.h  version.h  vmalloc.h
inc-wrap/linux/sched/: Makefile.am  signal.h
inc-wrap/linux/usb/: Makefile.am  ch9.h
inc-wrap/pcmcia/: Makefile.am
include/: Makefile.am  comedi.h
include/asm/: barrier.h  div64.h  dma.h  page.h  pgtable.h  semaphore.h  types.h  uaccess.h
include/linux/: Makefile.am  comedi-config.h.in  comedi.h  comedi_errno.h  comedi_rt.h  comedidev.h  comedilib.h  compiler.h  config.h  delay.h  devfs_fs_kernel.h  device.h  firmware.h  fs.h  highmem.h  init.h  interrupt.h  ioport.h  irq.h  isapnp.h  kdev_t.h  kern_compat.h  kernel.h  kmod.h  kref.h  mm.h  mod_devicetable.h  module.h  moduleparam.h  mutex.h  pci.h  pnp.h  poll.h  sched.h  semaphore.h  slab.h  spinlock.h  stddef.h  time.h  timer.h  (+6 more)
include/modbuild/: .keepme
include/pcmcia/: Makefile.am  ds.h
m4/: as-linux.m4  as-modtool.m4  linux.m4  rtai.m4  rtlinux.m4
man/: comedi.7  comedi_config.8
patches/: comedi-rtl-irq-tm.patch  patch-bufconfig  patch-pcmad  patch-rtai  pcmad.c  rel_comedi
rpm/: comedi.spec
scripts/: Configure  Configure.help  Menuconfig  check_driver  check_kernel  config.dist  config.dist-2.0.39  config.h.dist  config.in  dep.linux  dep.pcmcia  dep.rtai  dep.rtlinux  doc_devlist  dump_doc  generate_makefile  preconfigure  release
scripts/linux_flags/: Makefile
scripts/linux_flags-2.6/: Makefile
scripts/lxdialog/: Makefile
