
noinst_HEADERS=compiler.h config.h delay.h device.h firmware.h fs.h \
	init.h interrupt.h isapnp.h kernel.h kref.h mm.h mod_devicetable.h \
	module.h moduleparam.h mutex.h pci.h pci_ids.h pnp.h sched.h \
	semaphore.h slab.h stddef.h time.h timer.h types.h uaccess.h usb.h \
	version.h

SUBDIRS = sched
