
noinst_HEADERS=compiler.h config.h delay.h device.h firmware.h fs.h \
	init.h interrupt.h isapnp.h jiffies.h kernel.h kref.h ktime.h mm.h \
	mod_devicetable.h module.h moduleparam.h mutex.h pci.h pci_ids.h \
	pnp.h poll.h sched.h semaphore.h slab.h stddef.h string.h time.h \
	timer.h types.h uaccess.h unaligned.h usb.h version.h

SUBDIRS = sched
