
noinst_HEADERS=cdev.h compiler.h config.h delay.h device.h dma-mapping.h err.h \
	firmware.h fs.h init.h interrupt.h jiffies.h kernel.h kref.h \
	ktime.h mm.h module.h moduleparam.h mutex.h pci.h pci_ids.h \
	poll.h printk.h semaphore.h slab.h spinlock.h stddef.h string.h time.h \
	timer.h types.h uaccess.h unaligned.h usb.h

SUBDIRS = sched usb
